[package]
name = "roarsvg"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SVG deserialization for lyon_path."
categories = ["visualization", "science"]
repository = "https://github.com/carrascomj/roarsvg"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon_path = "1.0.4"
usvg = "0.36.0"
