[package]
name = "roarsvg"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SVG deserialization for lyon_path."
categories = ["visualization", "science"]
repository = "https://github.com/carrascomj/roarsvg"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon_path = "1.0.4"
usvg = "0.36.0"

# dependencies exclusive for wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde", "serde-serialize"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
	'File',
	'FileList',
  'HtmlLabelElement',
  'HtmlInputElement',
  'HtmlElement',
  'MouseEvent',
  'Url',
  'Node',
  'Window',
  'console',
]
